# davisgroup.uk

./: .gitignore  make.py  package.json  pyproject.toml  vault
.github/workflows/: test.yml
ansible/: hosts
ansible/playbooks/: deploy.json
ansible/roles/andromeda/tasks/: main.json
ansible/roles/caddy/files/: Caddyfile
ansible/roles/caddy/tasks/: main.json
ansible/roles/caddy/templates/: Caddyfile
ansible/roles/sshd/files/: sshd_config
ansible/roles/static_files/files/: deploy.sh
ansible/roles/static_files/tasks/: main.json
chikorita/: index.html  my-designs.md  package.json
chikorita/src/: App.tsx
freebee/: bun.lockb  index.html  package.json  vite.config.ts
freebee/src/: App.tsx  Game.ts  Helpers.ts  index.css
freebee/src/components/: GameBoard.tsx  HowToPlayPopup.tsx  ScoreBoard.tsx
liturgical/: README.md  generate_ical.py  liturgy.csv
share-location/: index.html  package.json
share-location/src/: App.tsx
static/: base64chat.html  index.html  liturgy.ics
static/construction/: index.html
static/photo-gallery/: index.html
writeups/: SystemD-Timers.md  Text-Message-Alerting-Discord-Linux.md  header.html
